// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with all props 1`] = `
<div
  className="overlay"
  onClick={[Function]}
  role="presentation"
>
  <div
    className="root"
    onClick={[Function]}
    role="presentation"
  >
    <div
      className="head"
    >
      <h3
        className="headTitle"
      >
        Modal title
      </h3>
    </div>
    <div
      className="body"
    >
      Modal content
    </div>
    <div
      className="footer"
    >
      <Button
        block={false}
        clickHandler={[Function]}
        disabled={false}
        icon={null}
        iconPosition="before"
        isLabelVisible={true}
        key="Action"
        label="Action"
        loading={false}
        priority="primary"
        size="medium"
        type="button"
        variant="default"
      />
      <Button
        block={false}
        clickHandler={[Function]}
        disabled={false}
        icon={null}
        iconPosition="before"
        isLabelVisible={true}
        label="Close"
        loading={false}
        priority="default"
        size="medium"
        type="button"
        variant="default"
      />
    </div>
  </div>
</div>
`;

exports[`rendering renders correctly with mandatory props only 1`] = `
<div
  className="overlay"
  onClick={[Function]}
  role="presentation"
>
  <div
    className="root"
    onClick={[Function]}
    role="presentation"
  >
    <div
      className="head"
    >
      <h3
        className="headTitle"
      >
        Modal title
      </h3>
    </div>
    <div
      className="body"
    >
      Modal content
    </div>
    <div
      className="footer"
    >
      <Button
        block={false}
        clickHandler={[Function]}
        disabled={false}
        icon={null}
        iconPosition="before"
        isLabelVisible={true}
        label="Close"
        loading={false}
        priority="default"
        size="medium"
        type="button"
        variant="default"
      />
    </div>
  </div>
</div>
`;
